# Re_X

./: .gitignore  LICENSE  README.md
data/real/0/index/: 0001.txt  0005.txt  0006.txt  0007.txt  0009.txt  0013.txt  0017.txt
data/real/0/index_ng/: 0005.txt
data/real/1/index/: 0000.txt  0002.txt  0003.txt  0010.txt  0011.txt  0012.txt  0014.txt  0015.txt
data/real/1/index_ng/: 0000.txt  0001.txt  0002.txt  0004.txt
data/real/index/: 0004.txt  0008.txt  0016.txt
data/real/index_ng/: 0003.txt
data/real/y_ng/: .directory
post-processing & evaluation/: CMakeLists.txt  MyLine.cpp  MyLine.h  MyPoint.cpp  MyPoint.h  main.cpp
results/my_model/: settings.txt
src/: classes.py  load.py  model.py  mynet.py  plotting.py  proc.py  test.py  test0.py  test1.py  test_in.txt  train.py  train0.py  train1.py  train_class.py
training & testing/: README.md  losses_sys.py  mean.py  patch_test.py  train.py
training & testing/handlers/: args.py  aug.py  load.py  plots.py  proc.py
training & testing/models/: mynet.py
